--- a/app/src/main/res/layout/adapter_view.xml
+++ b/app/src/main/res/layout/adapter_view.xml
@@ -5,8 +5,19 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:backgroundTint="@color/white"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical">
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_send"
+        android:background="@drawable/ic_action_name"
+        android:layout_marginLeft="350dp"
+        android:scaleType="fitXY"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
 
+        />
     <TextView
         android:id="@+id/textViewId"
         android:layout_width="match_parent"
@@ -41,4 +52,5 @@
         android:textColor="@android:color/holo_orange_dark"
         android:textSize="20sp"
         android:textStyle="bold" />
+
 </LinearLayout>
